Adicionado novas funções de comparação de imagens atravez de Phash e Hitogram. Adicionado o carregamento do PHash com a imagem.